third_party/move/move-compiler-v2/tests/checking/positional_fields/constructor_invalid0.move
module 0x42::test {
    struct S(u8, bool);

    fun foo() {
        S { 0: 42, 1: 42 };
    }
}
